# Local-Music-Player

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: App.cpp  App.h
src/files/: Directories.cpp  Directories.h  files.cpp  files.h
src/image/: Image.cpp  Image.h
src/renderer/: Renderer.cpp  Renderer.h
src/ui/: UI.cpp  UI.h
src/ui/contents/: Directories.cpp  Directories.h  DirectoriesUI.cpp  DirectoriesUI.h  SongsUI.cpp  SongsUI.h
